--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -8,6 +8,7 @@
         <item>ring road two lanes</item>
         <item>clover leaf</item>
         <item>cellular automata</item>
+        <item>Two in - Two out</item>
     </string-array>
     <string-array name="projectName">
         <item>routing</item>
@@ -16,6 +17,7 @@
         <item>ringroad_2lanes</item>
         <item>cloverleaf</item>
         <item>startStop_all_ca</item>
+        <item>two_in_two_out</item>
     </string-array>
     <string-array name="projectPath">
         <item>sim/games/</item>
@@ -24,6 +26,7 @@
         <item>sim/buildingBlocks/</item>
         <item>sim/buildingBlocks/</item>
         <item>sim/bookScenarioStartStop/</item>
+        <item>sim/games/</item>
     </string-array>
     <string-array name="infoScenario">
         <item>            Objective:\n\n
@@ -75,6 +78,7 @@ freeway if the traffic light is left green all the time.</item>
             Nagel-Schreckeberg\n
             Barlovic\n
             Kerner-Klenow-Wolf</item>
+       <item>Two roads in and two roads out</item>            
     </string-array>
     <string-array name="highscoreRouting">
         <item>Wow, King of the road! You really have figured this out.</item>
